fixes alignment issues

--- a/source/quartz/styles/custom.scss
+++ b/source/quartz/styles/custom.scss
@@ -74,6 +74,7 @@ body {
   margin: 0 auto;
   padding: 2rem 0;
   align-items: flex-start;
+  justify-content: center;
 
   @media (max-width: 1200px) {
     flex-direction: column;
